--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.3",
     "@testing-library/react": "^16.0.1",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/node": "^20",
