--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "firebase": "^10.14.0",
     "lucide-react": "^0.451.0",
     "next": "14.2.14",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
